syntax = "proto3";

package stats.service.dashboard;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.stats.proto";

message UserPredictionsRequestProto {
    int64 user_id = 1;
    int64 max_results = 2;
}

message SimilarEventsRequestProto {
    int64 event_id = 1;
    int64 user_id = 2;
    int64 max_results = 3;
}

message InteractionsCountRequestProto {
    repeated int64 event_id = 1;
}

message RecommendedEventProto {
    int64 event_id = 1;
    double score = 2;
}